Fixes hero logo z-index issue

--- a/src/sass/themes/_yvv.scss
+++ b/src/sass/themes/_yvv.scss
@@ -333,7 +333,7 @@
 	}
 
 	// Keep the branding under the gradient/heading
-	.c-hero .c-hero-content {
+	.c-hero .c-hero__caption {
 		z-index: 20;
 	}
 	
